app/design/frontend/Pearl/weltpixel_custom/web/css/source/_header.less
//Variables
@color-primario: #0D717F;
@color-secundario: #F6F8FB;
@color-variante: #000;
@Fuente1: 'Outfit';
@cart-img: url("../images/header/cart.svg");
//
//  Common
//  _____________________________________________

& when (@media-common = true) {
    .panel.wrapper {
        display: none;
    }
    :root body {
        .desktop-logo.desktop-logo-all {
            padding-right: 90px;
        }
        &.theme-pearl .page-wrapper .page-header-v1.sticky-header .header.content .minicart-wrapper {
            top: 79%;
            z-index: 10;
            right: 102px;
        }
        &.theme-pearl .page-wrapper .page-header-v1.sticky-header .header.content .nav-sections.sticky-header-nav {
            order: 3!important;
        }
        &.theme-pearl .page-wrapper .page-header-v1.sticky-header .header.content .block-search {
            order: 2!important;
            margin-left: 0!important;
            max-width: 1285px!important;
            margin: 0 auto!important;
            width: 573px;
            padding-left: 17px;
        }
        &.theme-pearl .page-wrapper .page-header-v1.sticky-header .header.content {
            max-width: 100%;
            display: inline-block;
        }
        &.theme-pearl .page-wrapper .page-header-v1.sticky-header .desktop-logo.desktop-logo-all {
            display: inline-block;
            margin: 0 auto;
        }
        &.theme-pearl .page-wrapper .page-header.sticky-header .logo img {
            width: inherit;
            height: 35px;
            position: relative;
            top: -12px;
        }
        &.theme-pearl .page-wrapper .page-header-v1.sticky-header .header.content .desktop-logo {
            margin-left: 90px;
        }
        &.theme-pearl .page-wrapper .page-header-v1.sticky-header .header.content .block-search .block-content .form.minisearch {
            left: 10px;
            position: relative;
        }

        &:not(.mobile-nav) .page-header.sticky-header .navigation,
        &:not(.mobile-nav) .page-header.sticky-header .nav-sections-item-content {
            background-color: #f6f8fb!important;
        }
        .header-multistore {
            display: none!important;
        }
        .panel.wrapper {
            display: none!important;
        }
        header.page-header {
            max-width: 1440px;
            margin: 0 auto;
        }
    }
    div.page-wrapper header.page-header .header.content, .page-wrapper .page-header .header_right {
        max-width: 1264px;
    }
    .page-wrapper {
        .block.welcome-loging {
            margin-bottom: 0;
            margin-top: -55px;
            float: right;
            margin-right: -76%;
            a.link-button {
                background: #0D717F;
                padding: 13px 25px;
                margin-right: 25px;
                border-radius: 25px;
                gap: 10px;
                &.secound{
                    color: #0D717F;;
                    background: white;
                    border: 1px solid #0D717F;
                    span{
                        color:#0D717F;
                    }
                }
                &:hover{
                    color: white;
                    background: #0D717F;
                    cursor: pointer;
                    &.secound{
                        color: #0D717F;;
                        background: white;
                        border: 1px solid #0D717F;
                        span{
                            color:#0D717F;
                        }
                    }
                }
                span{
                    font-family: 'Barlow';
                    font-style: normal;
                    font-weight: 500;
                    font-size: 16px;
                    line-height: 16px;
                    color: white;
                    text-transform: capitalize;
                }
            }
        }
        .page-main>.page-title-wrapper .page-title {
            display: inline-block;
            margin-top: 15px;
            color: #0d3371;
        }
        .nav-sections {
            margin-bottom: 0;
        }
        >.breadcrumbs, >.top-container, >.widget {
            box-sizing: border-box;
            width: 97.5%;
            background: @color-primario;
            color: white;
            padding: 15px 0;
            font-size: 18px;
            margin: 0 auto;
            padding-left: 2%;
            border-radius: 5px;
            max-width: 1250px;
        }
        .breadcrumbs a:visited {
            color: white;
            text-decoration: none;
            font-weight: 800!important;
        }
        .breadcrumbs .items {
            font-size: 1.2rem;
            color: white;
            font-weight: 800!important;
        }

        .page-header {
            .panel.wrapper {
                font-size: 11px;
                color: @color-variante;
                font-family: @Fuente1;
                font-weight: 400;
                line-height: 1.4;
            }
            .header.content {
                padding: 0 15px;
                .logo {
                    display: inline-block;
                    max-width: 50%;
                    margin: 28px 0;
                }
            }
        }
    }
}
/* ... */

